--- a/package.json
+++ b/package.json
@@ -1,42 +1,55 @@
 {
-  "name": "svelte-cloudflare",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "pnpm run build && wrangler pages dev",
-    "test": "npm run test:integration && npm run test:unit",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier --write .",
-    "test:integration": "playwright test",
-    "test:unit": "vitest",
-    "deploy": "pnpm run build && wrangler pages deploy",
-    "cf-typegen": "wrangler types && mv worker-configuration.d.ts src/"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241004.0",
-    "@playwright/test": "^1.28.1",
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/adapter-cloudflare": "^4.7.2",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
-    "@types/eslint": "^9.6.0",
-    "eslint": "^9.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.36.0",
-    "globals": "^15.0.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^5.0.0-next.1",
-    "svelte-check": "^3.6.0",
-    "typescript": "^5.0.0",
-    "typescript-eslint": "^8.0.0",
-    "vite": "^5.0.3",
-    "vitest": "^2.0.0",
-    "wrangler": "^3.80.2"
-  },
-  "type": "module"
+	"name": "svelte-cloudflare",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "concurrently --prefix none \"vite build --watch\" \"wrangler pages dev --port 5173\"",
+		"build": "vite build",
+		"preview": "vite build && wrangler pages dev",
+		"test": "npm run test:integration && npm run test:unit",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write .",
+		"test:integration": "playwright test",
+		"test:unit": "vitest",
+		"deploy": "pnpm run build && wrangler pages deploy",
+		"cf-typegen": "wrangler types && mv worker-configuration.d.ts src/",
+		"db:generate": "drizzle-kit generate --name",
+		"db:migrate": "drizzle-kit migrate",
+		"db:push": "drizzle-kit push",
+		"studio": "drizzle-kit studio",
+		"studio:prod": "cross-env NODE_ENV=production drizzle-kit studio"
+	},
+	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20241004.0",
+		"@playwright/test": "^1.28.1",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-cloudflare": "^4.7.2",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@types/eslint": "^9.6.0",
+		"@types/node": "^22.7.5",
+		"cross-env": "^7.0.3",
+		"drizzle-kit": "^0.25.0",
+		"eslint": "^9.0.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.36.0",
+		"globals": "^15.0.0",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^5.0.0-next.1",
+		"svelte-check": "^3.6.0",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.0.0",
+		"vite": "^5.0.3",
+		"vitest": "^2.0.0",
+		"wrangler": "^3.80.2"
+	},
+	"type": "module",
+	"dependencies": {
+		"@libsql/client": "^0.14.0",
+		"concurrently": "^9.0.1",
+		"drizzle-orm": "^0.34.1"
+	}
 }
